# OpenEnv-HR-Agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.openenv  README.md  RECOVER_ADAPTER.txt  app.py  colab_recover_adapter.ipynb  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  train_hr_agent.ipynb  train_hr_agent.py  train_qwen_grpo.py  verify_lora.py
.github/workflows/: deploy-hf-space.yml
hf_model_bundle/: README.md
qwen-hr-agent-trained/: README (1).md  adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
scripts/: publish_hf_model.ps1  sync_hf_space.ps1
server/: __init__.py  app.py
src/: __init__.py  agent.py  env.py  graders.py  models.py  scenarios.py
